# TeamTalk5

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.html  ChangeLog.txt  ChangeLog2.txt  License.txt  README.md  TeamTalk.cs  Ukrainian.lng  env.sh
Client/: CMakeLists.txt  CMakeLists_tolk.txt
Client/Prism/: 0001-Add-PRISM_USE_STATIC_CRT-option-to-select-MT-d-runti.patch  CMakeLists.txt
Client/TeamTalkAndroid/: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle
Client/TeamTalkApp.NET/: AudioStorageDlg.Designer.cs  AudioStorageDlg.cs  CMakeLists.txt  ChannelDlg.Designer.cs  ChannelDlg.cs  ChannelsView.cs  ConnectDlg.Designer.cs  ConnectDlg.cs  DesktopDlg.Designer.cs  DesktopDlg.cs  DesktopShareDlg.Designer.cs  DesktopShareDlg.cs  FileTransferDlg.Designer.cs  FileTransferDlg.cs  FilesView.cs  HotKeyDlg.Designer.cs  HotKeyDlg.cs  InputBox.Designer.cs  InputBox.cs  LoginDlg.Designer.cs  LoginDlg.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MediaFileDlg.Designer.cs  MediaFileDlg.cs  MessageDlg.Designer.cs  MessageDlg.cs  PreferencesDlg.Designer.cs  PreferencesDlg.cs  Program.cs  ServerPropertiesDlg.Designer.cs  ServerPropertiesDlg.cs  ServerStatsDlg.Designer.cs  ServerStatsDlg.cs  Settings.cs  UserAccountsDlg.Designer.cs  UserAccountsDlg.cs  UserInfoDlg.Designer.cs  UserInfoDlg.cs  (+4 more)
Client/TeamTalkClassic/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AppInfo.h  CMakeCache.txt  CMakeLists.txt  Helper.cpp  Helper.h  HttpRequest.cpp  HttpRequest.h  Languages.cpp  Languages.h  License.h  PlaySoundThread.cpp  PlaySoundThread.h  TeamTalk.idl  TeamTalk.rc  TeamTalk5Classic.vcxproj  TeamTalk5Classic.vcxproj.filters  TeamTalk5ClassicPro.vcxproj  TeamTalk5ClassicPro.vcxproj.filters  TeamTalkApp.cpp  TeamTalkApp.h  TeamTalkBase.cpp  TeamTalkBase.h  TeamTalkDlg.cpp  TeamTalkDlg.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  explorer1.cpp  explorer1.h  resource.h  stdafx.cpp  stdafx.h  ttclassic.cmake
Client/Tolk/: 0002-Add-ZDSR-support-to-tolk.patch  CMakeLists.txt  ScreenReaderDriverZDSR.cpp  ScreenReaderDriverZDSR.h  zdsr.h
Client/build-teamtalk5-Desktop_Qt_5_15_0_MSVC2015_64bit-Profile/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
Client/build-teamtalk5-Desktop_Qt_5_15_0_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  object_script.TeamTalk5.Debug  object_script.TeamTalk5.Release
Client/build-teamtalk5-Desktop_x86_windows_msvc2015_pe_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
Client/iTeamTalk/: .gitignore
Client/jSpamBot/: CMakeLists.txt  build.gradle
Client/jTeamTalk/: CMakeLists.txt  Makefile  README.md
Client/qtTeamTalk/: .clang-tidy  .gitignore  CMakeLists.txt  Entitlements.plist  Info.plist  Makefile.Debug  Makefile.Release  README.md  about.ui  aboutdlg.cpp  aboutdlg.h  appinfo.h  audiopreprocessor.ui  audiopreprocessordlg.cpp  audiopreprocessordlg.h  bannedusers.ui  bannedusersdlg.cpp  bannedusersdlg.h  bearwarelogindlg.cpp  bearwarelogindlg.h  bearwarelogindlg.ui  changestatus.ui  changestatusdlg.cpp  changestatusdlg.h  channel.ui  channeldlg.cpp  channeldlg.h  channelsmodel.cpp  channelsmodel.h  channelstree.cpp  channelstree.h  chatlineedit.cpp  chatlineedit.h  chattemplatesdlg.cpp  chattemplatesdlg.h  chattemplatesdlg.ui  chattextedit.cpp  chattextedit.h  chattextlist.cpp  chattextlist.h  (+162 more)
Client/tolk/: 0001-Add-CMake-script-for-building-tolk.patch  CMakeLists.txt
Client/ttphpadmin/: tt5admin.php
Client/ttsamplepy/: Makefile  ttsample.py
Client/ttserverlog/: CMakeLists.txt  Main.cpp  Makefile  README.md
Client/ttserverlog.net/: CMakeLists.txt  Program.cs
Client/ttserverlog_rust/: Cargo.toml  README.md
Client/ttserverlogpy/: .gitignore  Makefile  main.py
Documentation/TeamTalk/: .gitignore  CMakeLists.txt  README.md  TeamTalk5.dox  accessibility.md  advanced.md  hhc_exit0.bat_input  howto.md  mainpage.md  preferences.md  server.md  ttfiles.md  userinterface.md
Documentation/TeamTalkSDK/: .gitignore  CMakeLists.txt  TeamTalk.Java.dox  TeamTalk.NET.dox  TeamTalk.dox  changelog-capi.txt  changelog-net.txt  examples.txt  knownissues.txt  library-capi.txt  library-java.txt  library-net.txt  license.txt  mainpage.txt  modules-capi.txt  modules-net.txt  sdkcontent-capi.txt  sdkcontent-java.txt  sdkcontent-net.txt  sdkcontent.txt  serversetup.txt  stepbystep-capi.txt  stepbystep-java.txt  stepbystep-net.txt
Examples/TeamTalkApp.NET/: AudioStorageDlg.cs  CMakeLists.txt  ChannelDlg.cs  ChannelsView.cs  ConnectDlg.cs  DesktopDlg.Designer.cs  DesktopDlg.cs  DesktopShareDlg.Designer.cs  DesktopShareDlg.cs  FileTransferDlg.cs  FilesView.cs  HotKeyDlg.cs  InputBox.Designer.cs  InputBox.cs  LoginDlg.cs  MainForm.cs  MediaFileDlg.cs  MessageDlg.cs  PreferencesDlg.Designer.cs  PreferencesDlg.cs  ServerPropertiesDlg.cs  ServerStatsDlg.cs  TeamTalk5App.NET.csproj  UserAccountsDlg.cs  UserInfoDlg.cs  UsersView.cs  Util.cs  VideoDlg.cs
Examples/TeamTalkServer/: .gitignore  CMakeLists.txt  Main.cpp  Makefile  ttproserver.mpc  ttserver.mpc
Examples/TeamTalkServer.NET/: CMakeLists.txt  Program.cs  ServerCallback.cs  ServerLogger.cs  TeamTalkServer.NET.csproj
Examples/ttserverlog/: .gitignore  (+5 more)
Examples/ttserverlog.net/: CMakeLists.txt  Program.cs  ttserverlog.net.csproj
TeamTalkClassic/: .gitignore  AppInfo.h  CMakeLists.txt  Helper.cpp  Helper.h  HttpRequest.cpp  HttpRequest.h  Languages.cpp  Languages.h  License.h  PlaySoundThread.cpp  PlaySoundThread.h  README.md  TeamTalk.idl  TeamTalk.rc  TeamTalkApp.cpp  TeamTalkApp.h  TeamTalkBase.cpp  TeamTalkBase.h  TeamTalkClassic.vcxproj  TeamTalkClassic.vcxproj.filters  TeamTalkDlg.cpp  TeamTalkDlg.h  explorer1.cpp  explorer1.h  mdump.cpp  mdump.h  resource.h  stdafx.cpp  stdafx.h  ttclassic.cmake
TeamTalkJNI/: .gitignore  AndroidManifest.xml  CMakeLists.txt  Makefile  README.md  TeamTalk5JNI.vcxproj  TeamTalk5JNI.vcxproj.filters  TeamTalk5ProJNI.vcxproj  TeamTalk5ProJNI.vcxproj.filters  ttjni.mpc  ttprojni.mpc
(+1594 files in other folders)
